[project]
name = "pulsar"
version = "0.1.0"
description = "A custom toolkit for benchmarking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "rich",
  "httpx",
  "pytest",
  "testplan",
  "marshmallow==3.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pulsar"]


[project.scripts]
pulsar = "pulsar.test_plan:main"
hello = "main:main"
hello_cli = "pulsar.main_cli:main"
pulsar-run = "pulsar.cli.run:cli"